[package]
name = "rsvd"
version = "0.1.2"
authors = ["Erik Garrison <erik.garrison@gmail.com>"]
edition = "2021"
description = "randomized singular value decomposition (rSVD)"
license = "MIT"
repository = "https://github.com/ekg/rsvd"
readme = "README.md"
keywords = ["statistics", "SVD", "rSVD"]
categories = ["science"]
documentation = "https://docs.rs/rsvd"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.9.0"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas-static"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
